home-cluster/crossplane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crossplane-system
  labels:
    app.kubernetes.io/part-of: crossplane
